@@ -30,6 +30,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -74,19 +75,21 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 
         // 1) CORS 설정
-        http.cors(cors -> cors.configurationSource(new CorsConfigurationSource() {
-            @Override
-            public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                CorsConfiguration cfg = new CorsConfiguration();
-                cfg.setAllowedOrigins(Collections.singletonList("https://i13e103.p.ssafy.io"));
-                cfg.setAllowedMethods(Collections.singletonList("*"));
-                cfg.setAllowedHeaders(Collections.singletonList("*"));
-                cfg.setExposedHeaders(Collections.singletonList("Authorization"));
-                cfg.setAllowCredentials(true);
-                cfg.setMaxAge(3600L);
-                return cfg;
-            }
+        http.cors(cors -> cors.configurationSource(request -> {
+            CorsConfiguration cfg = new CorsConfiguration();
+            // 와일드카드 패턴 사용 (Spring 6+)
+            cfg.setAllowedOriginPatterns(List.of(
+                    "https://*.stay-oasis.kr",
+                    "http://localhost:*"
+            ));
+            cfg.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
+            cfg.setAllowedHeaders(List.of("Authorization","Content-Type","X-Requested-With"));
+            cfg.setExposedHeaders(List.of("Authorization","Set-Cookie"));
+            cfg.setAllowCredentials(true);
+            cfg.setMaxAge(3600L);
+            return cfg;
         }));
+
 
         // 2) CSRF, FormLogin, BasicAuth 비활성화
         http.csrf(csrf -> csrf.disable());
@@ -96,6 +99,9 @@ public class SecurityConfig {
         // 3) 경로별 인가 설정
         http.authorizeHttpRequests(auth -> auth
                         .requestMatchers(HttpMethod.GET,
+                                // 테스트용 토큰 발행
+                                // 배포시 삭제
+                                "/api/v1/dev/**",
                                 "/oauth2/authorization/**",
                                 "/login/oauth2/code/**",
                                 "/api/google/redirect",
@@ -127,6 +133,10 @@ public class SecurityConfig {
                         "/oauth2/authorization" // 로그인 시작 URL prefix (공용)
                 );
 
+        http.sessionManagement(session ->
+                session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
+        );
+
         http.oauth2Login(oauth2 -> oauth2
                 // 로그인 시작점: /oauth2/authorization/{registrationId}
                 // 리다이렉트 수신: /login/oauth2/code/{registrationId}
@@ -135,6 +145,11 @@ public class SecurityConfig {
                 .userInfoEndpoint(ui -> ui
                         .userService(customOAuth2UserService)
                         .oidcUserService(customOidcUserService)) // OIDC (구글))
+                .authorizationEndpoint(authz -> authz
+                        .authorizationRequestRepository(
+                                new org.springframework.security.oauth2.client.web.HttpSessionOAuth2AuthorizationRequestRepository()
+                        )
+                )
                 // 성공 시: JWT 발급 등
                 .successHandler(oAuth2SuccessHandler)
                 // 실패 시 처리
